kubernetes/manifests/apps/qbittorrent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
  labels:
    app: qbittorrent-23.3.2
    app.kubernetes.io/instance: qbittorrent
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: qbittorrent
    app.kubernetes.io/version: 5.1.2
    helm-revision: '1'
    helm.sh/chart: qbittorrent-23.3.2
    release: qbittorrent
  name: qbittorrent
  namespace: apps
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: qbittorrent
      app.kubernetes.io/name: qbittorrent
      pod.name: main
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/cnpg: 2291fc448ae81adfd860632d73e38ffc039fc25959ede77cf692f754199383ee
        checksum/configmaps: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
        checksum/mariadb: 09c85576cb45b1eecd1467732b11ea8fa3363b0105c465f02a6ad64991521d52
        checksum/mongodb: 09c85576cb45b1eecd1467732b11ea8fa3363b0105c465f02a6ad64991521d52
        checksum/persistence: 4678e240e153f1f5d036b8bf0318c13d86d559913c1e4050352193b9265620a6
        checksum/redis: 013343a028cbb3f7e08f4ba7522702dd98e52632c688641074b0b1db3df29894
        checksum/secrets: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
        checksum/services: e956a5c4cf8923876402324a4ea8a601db8255d76b9950b219ec45bfec96e545
        checksum/solr: 29c14feeaddbf7762052db593898d274941f539cee681ddc613957587686f347
      labels:
        app: qbittorrent-23.3.2
        app.kubernetes.io/instance: qbittorrent
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: qbittorrent
        app.kubernetes.io/version: 5.1.2
        helm-revision: '1'
        helm.sh/chart: qbittorrent-23.3.2
        pod.lifecycle: permanent
        pod.name: main
        release: qbittorrent
        truecharts.org/pvc: config_shared
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: truecharts.org/pvc
                    operator: In
                    values:
                      - config_shared
              topologyKey: kubernetes.io/hostname
      automountServiceAccountToken: false
      containers:
        - env:
            - name: TZ
              value: UTC
            - name: UMASK
              value: '0022'
            - name: UMASK_SET
              value: '0022'
            - name: NVIDIA_VISIBLE_DEVICES
              value: void
            - name: PUID
              value: '568'
            - name: USER_ID
              value: '568'
            - name: UID
              value: '568'
            - name: PGID
              value: '568'
            - name: GROUP_ID
              value: '568'
            - name: GID
              value: '568'
            - name: DNS_KEEP_NAMESERVER
              value: 'on'
            - name: DOT
              value: 'off'
            - name: FIREWALL
              value: 'on'
            - name: FIREWALL_INPUT_PORTS
              value: 8080,62657,80
            - name: FIREWALL_OUTBOUND_SUBNETS
              value: 172.16.0.0/16,172.17.0.0/16
            - name: QBT_PASSWORD
              value: adminadmin
            - name: QBT_USERNAME
              value: admin
          image: tccr.io/tccr/gluetun:v3.40.0@sha256:a8189e29155e0f8142be1500ae068a92b189b1b25abbba036321e74d6389bf2b
          imagePullPolicy: IfNotPresent
          name: qbittorrent-gluetun
          resources:
            limits:
              cpu: 1000m
              memory: 1500Mi
            requests:
              cpu: 100m
              memory: 250Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
                - MKNOD
                - CHOWN
                - SETUID
                - SETGID
                - FOWNER
                - DAC_OVERRIDE
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 568
            runAsNonRoot: false
            runAsUser: 0
            seccompProfile:
              type: RuntimeDefault
          stdin: false
          tty: false
          volumeMounts:
            - mountPath: /dev/shm
              name: devshm
              readOnly: false
            - mountPath: /downloads
              name: shared
              readOnly: false
            - mountPath: /tmp
              name: tmp
              readOnly: false
            - mountPath: /var/logs
              name: varlogs
              readOnly: false
            - mountPath: /var/run
              name: varrun
              readOnly: false
        - env:
            - name: TZ
              value: UTC
            - name: UMASK
              value: '0022'
            - name: UMASK_SET
              value: '0022'
            - name: NVIDIA_VISIBLE_DEVICES
              value: void
            - name: S6_READ_ONLY_ROOT
              value: '1'
            - name: DOCKER_MODS
              value: ghcr.io/vuetorrent/vuetorrent-lsio-mod:latest
            - name: QBT_TORRENTING_PORT
              value: '6881'
            - name: QBT_WEBUI_PORT
              value: '80'
            - name: TORRENTING_PORT
              value: '62657'
            - name: WEBUI_PORT
              value: '8080'
          image: lscr.io/linuxserver/qbittorrent:5.1.2@sha256:d464a92d5656f1fa66baafe610a06a6cafd4bdf900a245e6f20b220f281b456d
          imagePullPolicy: IfNotPresent
          name: qbittorrent
          ports:
            - containerPort: 8080
              name: main
              protocol: TCP
            - containerPort: 6881
              name: torrent
              protocol: TCP
            - containerPort: 6881
              name: torrentudp
              protocol: UDP
          resources:
            limits:
              cpu: 1000m
              memory: 1500Mi
            requests:
              cpu: 100m
              memory: 250Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add: []
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 65534
            runAsNonRoot: true
            runAsUser: 65534
            seccompProfile:
              type: RuntimeDefault
          stdin: false
          tty: false
          volumeMounts:
            - mountPath: /config
              name: config
              readOnly: false
            - mountPath: /dev/shm
              name: devshm
              readOnly: false
            - mountPath: /downloads
              name: shared
              readOnly: false
            - mountPath: /tmp
              name: tmp
              readOnly: false
            - mountPath: /var/logs
              name: varlogs
              readOnly: false
            - mountPath: /var/run
              name: varrun
              readOnly: false
      dnsConfig:
        options:
          - name: ndots
            value: '1'
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      hostUsers: true
      nodeSelector:
        kubernetes.io/arch: amd64
      restartPolicy: Always
      securityContext:
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups:
          - 568
        sysctls: []
      serviceAccountName: default
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 60
      topologySpreadConstraints:
        - labelSelector:
            matchLabels:
              app.kubernetes.io/instance: qbittorrent
              app.kubernetes.io/name: qbittorrent
              pod.name: main
          maxSkew: 1
          nodeAffinityPolicy: Honor
          nodeTaintsPolicy: Honor
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
      volumes:
        - emptyDir:
            medium: Memory
            sizeLimit: 1500Mi
          name: devshm
        - emptyDir:
            medium: Memory
            sizeLimit: 1500Mi
          name: tmp
        - emptyDir:
            medium: Memory
            sizeLimit: 1500Mi
          name: varlogs
        - emptyDir:
            medium: Memory
            sizeLimit: 1500Mi
          name: varrun
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-config
        - name: shared
          persistentVolumeClaim:
            claimName: cephfs-apps-shared-storage
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
    lbipam.cilium.io/ips: 10.10.10.119
    lbipam.cilium.io/sharing-key: qbittorrent
  labels:
    app: qbittorrent-23.3.2
    app.kubernetes.io/instance: qbittorrent
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: qbittorrent
    app.kubernetes.io/version: 5.1.2
    helm-revision: '1'
    helm.sh/chart: qbittorrent-23.3.2
    release: qbittorrent
    service.name: main
  name: qbittorrent
  namespace: apps
spec:
  allocateLoadBalancerNodePorts: false
  ports:
    - name: main
      port: 80
      protocol: TCP
      targetPort: 8080
  publishNotReadyAddresses: false
  selector:
    app.kubernetes.io/instance: qbittorrent
    app.kubernetes.io/name: qbittorrent
    pod.name: main
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
  labels:
    app: qbittorrent-23.3.2
    app.kubernetes.io/instance: qbittorrent
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: qbittorrent
    app.kubernetes.io/version: 5.1.2
    helm-revision: '1'
    helm.sh/chart: qbittorrent-23.3.2
    release: qbittorrent
    service.name: torrent
  name: qbittorrent-torrent
  namespace: apps
spec:
  ports:
    - name: torrent
      port: 6881
      protocol: TCP
      targetPort: 6881
    - name: torrentudp
      port: 6881
      protocol: UDP
      targetPort: 6881
  publishNotReadyAddresses: false
  selector:
    app.kubernetes.io/instance: qbittorrent
    app.kubernetes.io/name: qbittorrent
    pod.name: main
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    checksum/secrets: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
    checksum/services: e956a5c4cf8923876402324a4ea8a601db8255d76b9950b219ec45bfec96e545
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
  labels:
    app: qbittorrent-23.3.2
    app.kubernetes.io/instance: qbittorrent
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: qbittorrent
    app.kubernetes.io/version: 5.1.2
    helm-revision: '1'
    helm.sh/chart: qbittorrent-23.3.2
    release: qbittorrent
  name: qbittorrent
  namespace: apps
spec:
  ingressClassName: cilium
  rules:
    - host: qbittorrent.josevictor.me
      http:
        paths:
          - backend:
              service:
                name: qbittorrent
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - qbittorrent.josevictor.me
      secretName: wildcard-tls
